tests/functional/lang/eval-fail-toJSON.err.exp
error:
       … while calling the 'toJSON' builtin
         at /pwd/lang/eval-fail-toJSON.nix:1:1:
            1| builtins.toJSON {
             | ^
            2|   a.b = [

       … while evaluating attribute 'a' at 2:3:
            1| builtins.toJSON {
            2|   a.b = [
             |   ^
            3|     true

       … while evaluating attribute 'b' at 2:3:
            1| builtins.toJSON {
            2|   a.b = [
             |   ^
            3|     true

       … while evaluating list element at index 3

       … while evaluating attribute 'c'
         at /pwd/lang/eval-fail-toJSON.nix:7:7:
            6|     {
            7|       c.d = throw "hah no";
             |       ^
            8|     }

       … while evaluating attribute 'd' at 7:7:
            6|     {
            7|       c.d = throw "hah no";
             |       ^
            8|     }

       … while calling the 'throw' builtin at 7:13:
            6|     {
            7|       c.d = throw "hah no";
             |             ^
            8|     }

       error: hah no
